--- a/src/main/gui/modifica_mezzo.ui
+++ b/src/main/gui/modifica_mezzo.ui
@@ -10,6 +10,18 @@
     <height>357</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>386</width>
+    <height>357</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>386</width>
+    <height>357</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Modifica Mezzo</string>
   </property>
